src/tests/snapshots/cargo_vet__tests__vet__mock-complex-core10-partially-too-weak.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "certify_web_gui_data": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "missing_criteria": [
        "reviewed"
      ],
      "name": "third-core",
      "version": "10.0.0"
    }
  ],
  "suggest": {
    "suggest_by_criteria": {
      "reviewed": [
        {
          "name": "third-core",
          "notable_parents": "firstB, thirdA, thirdAB",
          "suggested_criteria": [
            "reviewed"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 75,
              "raw": "+75"
            },
            "from": "5.0.0",
            "to": "10.0.0"
          }
        }
      ]
    },
    "suggestions": [
      {
        "name": "third-core",
        "notable_parents": "firstB, thirdA, thirdAB",
        "suggested_criteria": [
          "reviewed"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 75,
            "raw": "+75"
          },
          "from": "5.0.0",
          "to": "10.0.0"
        }
      }
    ],
    "total_lines": 75
  }
}
