src/tests/snapshots/cargo_vet__tests__vet__mock-complex-core10-partially-too-weak.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

1 unvetted dependencies:
  third-core:10.0.0 missing ["reviewed"]

recommended audits for reviewed (or strong-reviewed):
    Command                                 Publisher  Used By                      Audit Size
    cargo vet diff third-core 5.0.0 10.0.0  UNKNOWN    firstB, thirdA, and thirdAB  1 files changed, 75 insertions(+)

estimated audit backlog: 75 lines

Use |cargo vet certify| to record the audits.

