src/tests/snapshots/cargo_vet__tests__vet__mock-complex-missing-core10.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Failed!

1 unvetted dependencies:
  third-core:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    cargo vet diff third-core 5.0.0 10.0.0  (used by firstB, thirdA, thirdAB)  (+75)

estimated audit backlog: 75 lines

Use |cargo vet certify| to record the audits.

